<resources>
    <string name="app_name">foodtoday</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_nav_label">Home</string>
    <string name="favorite_nav_label">Favorite</string>
    <string name="today_nav_label">Today</string>
    <string name="floating_menu">floating menu</string>
    <string name="emoji_no_internet">emoji_no_internet</string>
    <string name="no_internet_text">No Internet Conection</string>
    <string name="description_text_resources">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="food_img">food_img</string>
    <string name="tittle_recipe_text">Tittle recipe</string>
    <string name="favorite_img_recipe">favorite_img_recipe</string>
    <string name="favorite_count_text">100</string>
    <string name="time_count_text">100</string>
    <string name="vegan_count_text">Vegan</string>
    <string name="vegan_image_content">vegan_image_content</string>
    <string name="time_image_content">time_image_content</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="finger_food">Finger Food</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketoganic">Ketoganic</string>
    <string name="vegan">Vegan</string>
    <string name="ovo_vegetarian">Ovo Vegetarian</string>
    <string name="lacto_vegetarian">Lacto Vegetarian</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole_30">Whole 30</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>
    <string name="cheap">Cheap</string>
    <string name="healthy">Healthy</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="save_to_favorite">Save To Favorite</string>
    <string name="no_favorite_recipes">No favorite recipes.</string>
    <string name="delete_favorite_menu">Delete Favorite Menu</string>
    <string name="delete_all">Delete All</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet amte banget dah.</string>
    <string name="share">Share</string>
</resources>